--- a/Book_Store/book/templates/show_book.html
+++ b/Book_Store/book/templates/show_book.html
@@ -1,5 +1,36 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1> Hello Selim  </h1>
+<div style="width:80%; margin:auto;">
+<h1>List of Books</h1>
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Book Name</th>
+            <th scope="col">Author Name</th>
+            <th scope="col">Category</th>
+            <th scope="col">First Publication</th>
+            <th scope="col">Last Publication</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for item in data %}
+          <tr>
+            <td>{{item.id}}</td>
+            <td>{{item.book_name}}</td>
+            <td>{{item.author}}</td>
+            <td>{{item.category}}</td>
+            <td>{{item.first_pub}}</td>
+            <td>{{item.last_pub}}</td>
+            <td><a href="{% url 'edit_book' id=item.id %}" class='btn btn-warning btn-sm'>Edit</a> <a class='btn btn-danger btn-sm'>Delete</a></td>
+          </tr>
+          
+        {% endfor %}
+        </tbody>
+      </table>
+
+
+</div>
 {% endblock %}
