--- a/Book_Store/book/templates/store_book.html
+++ b/Book_Store/book/templates/store_book.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
-<div>
+
+
+<div style="width:50%; margin:auto; ">
+    <h1>Welcome To Book Store Management</h1>
 <form method="post">
-    {{form}}
+    {% csrf_token %}
+    {{form|crispy}}
+    <button class="btn btn-info" type="submit">Submit</button>
 </form>
 </div>
 {% endblock %}
