--- a/Book_Store/book/templates/show_book.html
+++ b/Book_Store/book/templates/show_book.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div style="width:80%; margin:auto;">
 <h1>List of Books</h1>
+{% if data %}
     <table class="table table-bordered">
         <thead>
           <tr>
@@ -24,13 +25,15 @@
             <td>{{item.category}}</td>
             <td>{{item.first_pub}}</td>
             <td>{{item.last_pub}}</td>
-            <td><a href="{% url 'edit_book' id=item.id %}" class='btn btn-warning btn-sm'>Edit</a> <a class='btn btn-danger btn-sm'>Delete</a></td>
+            <td><a href="{% url 'edit_book' id=item.id %}" class='btn btn-warning btn-sm' >Edit</a> <a class='btn btn-danger btn-sm' href="{% url 'delete_book' id=item.id %}">Delete</a></td>
           </tr>
           
         {% endfor %}
         </tbody>
       </table>
-
-
-</div>
+     {% else %}
+      <h3>No Data Avaiable</h3>
+     {% endif %}
+    
+    </div>
 {% endblock %}
